--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "mini program request jest mock",
   "main": "dist/request-mock.min.js",
   "module": "dist/request-mock.es.js",
+  "types": "typings/index.d.ts",
   "scripts": {
     "lint": "eslint --ext .ts --ext .tsx src -c .eslintrc.js",
     "fix": "npm run lint --fix",
